--- a/网络代理.md
+++ b/网络代理.md
@@ -2,9 +2,9 @@
 
 #### 工具 `推荐`
 
-> [`winXray`](https://github.com/TheMRLL/winxray)、[`基于aardio 🔊 专注于桌面软件开发`](http://www.aardio.com/)
+> [`winXray`](https://github.com/TheMRLL/winxray)（[Base on`aardio 🔊 专注于桌面软件开发`](http://www.aardio.com/)）
 
-> [`v2ray`](https://github.com/v2ray/v2ray-core)、[`v2ray`ctrl+c`订阅url`](http://120.92.132.166:8888/down/MshRNLEFCNSe)
+> [`v2ray`](https://github.com/v2ray/v2ray-core)（[Copy`订阅url`](http://120.92.132.166:8888/down/MshRNLEFCNSe)）
 
-> [`clash`](https://github.com/Dreamacro/clash)、[`clash`ctrl+c`订阅url`](https://suo.yt/YestHxZ)
+> [`clash`](https://github.com/Dreamacro/clash)（[Copy`订阅url`](https://suo.yt/YestHxZ)）
 
