--- a/网络安全.md
+++ b/网络安全.md
@@ -1,5 +1,6 @@
 # 网络安全
 
+> [`网络安全产品`百度百科](https://baike.baidu.com/item/%E7%BD%91%E7%BB%9C%E5%AE%89%E5%85%A8%E4%BA%A7%E5%93%81/4181001)
 
 ## 产品厂商分类
 
@@ -96,7 +97,7 @@
 
 #### 工控安全产品与厂商大全
 
-    威努特、匡恩网络、谷神星、海天炜业、珠海鸿瑞、力控华康、启明星辰、绿盟科技、中科网威、三零卫士、安恒信息、北京网藤科技、天地和兴、安恒信息……
+    威努特、匡恩网络、谷神星、海天炜业、珠海鸿瑞、力控华康、启明星辰、绿盟科技、中科网威、三零卫士、安恒信息、北京网藤科技、天地和兴、安恒信息
 
 * 工控防火墙：中科网威、威努特、匡恩网络、谷神星、海天炜业、力控华康、天地和兴、安点科技、网藤科技、卫达安全、博智软件、九略智能
 * 工控安全审计：威努特、天地和兴、匡恩网络、网藤科技、斗象科技/漏洞盒子/网藤风险感知、安点科技、博智软件、安恒信息、知道创宇、中科网威
@@ -113,8 +114,8 @@
 
 #### 中国自主可控网络安全产品与厂商
 
-    数据来源于申威产业联盟、龙芯产业联盟、中关村可信计算产业联盟自主可信专委会；
-    就自主可控行业的特殊性而言，很多大厂商是作为特供产品进行市场宣传，而小厂商只作为品牌规划，并没有特殊宣传，在数据收集时可能会导致内容不全面；
+    数据来源于申威产业联盟、龙芯产业联盟、中关村可信计算产业联盟自主可信专委会
+    就自主可控行业的特殊性而言，很多大厂商是作为特供产品进行市场宣传，而小厂商只作为品牌规划，并没有特殊宣传，在数据收集时可能会导致内容不全面
     对于名单中未涉及的厂商，可以单独联系， 告知欲添加的分类、公司名称（需在上述3个联盟中）
     
 * 防火墙：中科神威、天融信、网御星云、东软、中科曙光、蓝盾、中航鸿电、中船综合院、706所
