--- a/网络安全.md
+++ b/网络安全.md
@@ -84,8 +84,8 @@
 * 移动终端管理/EMM/MDM：国信灵通/启迪国信、北信源、360、明朝万达、中软、安天、上讯信息、北京珊瑚灵御、亚信安全、金山、蓝盾、江民科技、江南信安
 * CASB/云业务安全接入代理：炼石网络、云安宝、信云科技、绿盟科技、启明星辰
 * 手机APP安全：梆梆安全、北京智游网安/爱加密、阿里聚安全、360、任子行、北京鼎源科技、腾讯御安全、恒安嘉新、安普诺、安码科技
-* 基于云的安全服务：青松云安全、青藤云安全、百度云、腾讯云、阿里云、360、华为、安全宝、山石网科、万般上品、东软、卫达安全、白帽汇、海峡信息、四叶草安全、中国电信·安全帮 | 此条目待调整、待完善！
-* 大数据安全：安恒信息、启明星辰、绿盟科技、360、派拉软件、观数科技、瀚思、天行网安、上海观安、聚铭网络、中孚信息、恒安嘉新、志翔科技、知道创宇、科来公司、安码科技、杭州美创 | 这是一个比较纠结的分类，因为牵扯到的内容太多……现在主流的安全厂家几乎都能做一部分，但是……这个分类可能近期会做细化
+* 基于云的安全服务：青松云安全、青藤云安全、百度云、腾讯云、阿里云、360、华为、安全宝、山石网科、万般上品、东软、卫达安全、白帽汇、海峡信息、四叶草安全、中国电信·安全帮
+* 大数据安全：安恒信息、启明星辰、绿盟科技、360、派拉软件、观数科技、瀚思、天行网安、上海观安、聚铭网络、中孚信息、恒安嘉新、志翔科技、知道创宇、科来公司、安码科技、杭州美创
 
 #### 安全管理
 
@@ -95,7 +95,7 @@
 * 漏洞扫描与管理：安恒信息、榕基、启明星辰、绿盟科技、铱迅信息、极地银河、蓝盾、WebRay远江、江南天安、杭州迪普、天融信、交大捷普、安犬漏洞扫描云平台、经纬信安、上海观安、中铁信睿安、斗象科技/漏洞盒子/网藤风险感知、宿州东辉、四叶草安全、恒安嘉新、安天、蓝盾、君众甲匠、博智软件、中科网威、立思辰、六壬网安、安普诺
 * 网络和主机配置核查系统：安恒信息、思福迪、绿盟科技、启明星辰、聚铭网络、北京随方信息、博智软件
 * 主机安全保密检查工具：中孚信息、北信源、北京天桥、哈尔滨朗威、万里红、华安保、上海浩迈、博智软件、方德信安
-* 信息安全等级保护测评工具箱：安恒信息、国瑞信安、圣博润、公安一所、锐安 | 注：市面上多家厂家均生产此产品，但公安部仅指定了5家作为“合格的”生产单位！
+* 信息安全等级保护测评工具箱：安恒信息、国瑞信安、圣博润、公安一所、锐安
 * 网络安全态势感知：安恒信息、知道创宇、360、绿盟科技、WebRay远江盛邦、四叶草安全、任子行、上海观安、兰云科技、聚铭网络、恒安嘉新、白帽汇、杭州合众、亚信安全、安天、郑州赛欧思、江民科技、科来公司、安码科技
 * 应急处置工具箱：安恒信息
 
