--- a/网络安全.md
+++ b/网络安全.md
@@ -2,6 +2,8 @@
 
 > 文档资料
 * [`网络安全产品`百科](https://baike.baidu.com/item/%E7%BD%91%E7%BB%9C%E5%AE%89%E5%85%A8%E4%BA%A7%E5%93%81/4181001)
+* [二级、三级等保要求比较](https://bbs.sangfor.com.cn/forum.php?mod=viewthread&tid=59811)
+* [`深信服`物联网安全管理平台`网络安全态势感知`](https://bbs.sangfor.com.cn/plugin.php?id=sangfor_databases:index&mod=viewdatabase&tid=134409)
 
 > 小工具
 * [`测速网`检测工具](https://www.speedtest.cn/tools)、[`脚本之家`在线工具](http://tools.jb51.net/)、[`BeJSON`开发工具](http://www.bejson.com/)
