--- a/网络安全.md
+++ b/网络安全.md
@@ -12,7 +12,7 @@
 
 #### 物理安全
 
-* 存储介质信息消除/粉碎机：北信源、和升达、科密、30所、利谱、交大捷普、兰天致信、中超伟业、博智软件、方德信安、深圳汇远佳禾
+* 存储介质信息消除/粉碎机：[北信源](http://www.vrv.com.cn/products-6.html)、[和升达](http://www.heshengda.com/Index/lists/catid/2.html)、[科密](http://www.cometgroup.com.cn/chanpin/)、[30所](https://baike.baidu.com/item/%E4%B8%AD%E5%9B%BD%E7%94%B5%E5%AD%90%E7%A7%91%E6%8A%80%E9%9B%86%E5%9B%A2%E5%85%AC%E5%8F%B8%E7%AC%AC%E4%B8%89%E5%8D%81%E7%A0%94%E7%A9%B6%E6%89%80/10587547)、[利谱](https://www.tiptop.com.cn/prosolutions.php?cid=15&id=49)、[交大捷普](http://www.jump.net.cn/sv.aspx?TypeId=36&FId=t8:36:8)、[中超伟业](https://www.zgzcwy.com/solve/2.html)、[博智软件](https://elextec.com/product.html)
 
 #### 网络安全
 
