--- a/网络安全.md
+++ b/网络安全.md
@@ -70,7 +70,7 @@
 * 应用统一身份管理/身份认证/单点登录/认证网关/PKI/CA/数字证书/令牌/各种KEY：天诚安信、派拉软件、神州融信、上海格尔、天威诚信、信安世纪、东软、吉大正元、安识科技、北京安讯奔、九州云腾、中科曙光、洋葱安全、极验验证、立思辰、江南信安、山东确信、中科恒伦、上海林果、福建伊时代
 * 代码防火墙：上海观安
 * 加密安全设备/NDLP：福建伊时代、时代亿信、365数据安全、天空卫士、思为同飞
-* 反钓鱼/反欺诈：[电信云堤](http://www.damddos.com/index.html)、[国舜股份](http://www.unisguard.com/webyyfhq.html)、[知道创宇](https://blog.knownsec.com/Knownsec_RD_Checklist/index.html)、百度、阿里、腾讯、360、安天、亚信安全、安恒信息、江民科技、华青融天
+* 反钓鱼/反欺诈：[电信云堤](http://www.damddos.com/index.html)、[国舜股份](http://www.unisguard.com/webyyfhq.html)、[知道创宇](https://blog.knownsec.com/Knownsec_RD_Checklist/index.html)、百度、阿里、[腾讯](https://s.tencent.com/product/shentu/index.html)、360、安天、亚信安全、安恒信息、江民科技、华青融天
 * 语音安全：北京无限互联
 
 #### 数据安全
