--- a/网络安全.md
+++ b/网络安全.md
@@ -2,8 +2,8 @@
 
 > 文档资料
 * [`网络安全产品`百科](https://baike.baidu.com/item/%E7%BD%91%E7%BB%9C%E5%AE%89%E5%85%A8%E4%BA%A7%E5%93%81/4181001)
+* [`深信服`物联网安全管理平台](https://bbs.sangfor.com.cn/plugin.php?id=sangfor_databases:index&mod=viewdatabase&tid=134409)
 * [二级、三级等保要求比较](https://bbs.sangfor.com.cn/forum.php?mod=viewthread&tid=59811)
-* [`深信服`物联网安全管理平台`网络安全态势感知`](https://bbs.sangfor.com.cn/plugin.php?id=sangfor_databases:index&mod=viewdatabase&tid=134409)
 
 > 小工具
 * [`测速网`检测工具](https://www.speedtest.cn/tools)、[`脚本之家`在线工具](http://tools.jb51.net/)、[`BeJSON`开发工具](http://www.bejson.com/)
@@ -121,8 +121,6 @@
 #### 中国自主可控网络安全产品与厂商
 
     数据来源于申威产业联盟、龙芯产业联盟、中关村可信计算产业联盟自主可信专委会
-    就自主可控行业的特殊性而言，很多大厂商是作为特供产品进行市场宣传，而小厂商只作为品牌规划，并没有特殊宣传，在数据收集时可能会导致内容不全面
-    对于名单中未涉及的厂商，可以单独联系， 告知欲添加的分类、公司名称（需在上述3个联盟中）
     
 * 防火墙：中科神威、天融信、网御星云、东软、中科曙光、蓝盾、中航鸿电、中船综合院、706所
 * 入侵检测/防御：中科神威、网神、中科曙光、安恒信息 、绿盟科技、汉柏
@@ -133,7 +131,7 @@
 * 终端安全：北信源、江民科技
 * Web应用防火墙：上海天泰
 * 堡垒机：建恒信安、江南寰宇
-* * 负载均衡：般固科技
+* 负载均衡：般固科技
 * 防毒墙：江民科技
 * 备份一体机：壹进制
 * 网络流量分析：北京卓迅
