--- a/网络安全.md
+++ b/网络安全.md
@@ -2,8 +2,7 @@
 
 > 文档资料
 * [`网络安全产品`百科](https://baike.baidu.com/item/%E7%BD%91%E7%BB%9C%E5%AE%89%E5%85%A8%E4%BA%A7%E5%93%81/4181001)
-* [`深信服`物联网安全管理平台](https://bbs.sangfor.com.cn/plugin.php?id=sangfor_databases:index&mod=viewdatabase&tid=134409)
-* [二级、三级等保要求比较](https://bbs.sangfor.com.cn/forum.php?mod=viewthread&tid=59811)
+* [`等保`二级、三级要求比较](https://bbs.sangfor.com.cn/forum.php?mod=viewthread&tid=59811)
 
 > 小工具
 * [`测速网`检测工具](https://www.speedtest.cn/tools)、[`脚本之家`在线工具](http://tools.jb51.net/)、[`BeJSON`开发工具](http://www.bejson.com/)
@@ -22,7 +21,7 @@
 * VPN：[深信服](https://bbs.sangfor.com.cn/plugin.php?id=service:download)、天融信、蓝盾、360、华为、绿盟科技、卫士通、信安世纪、奥联科技、启明星辰、南京易安联、华清信安、上海纽盾、东软、海峡信息、博智软件、H3C、江南信安、弘积科技、山东确信
 * 上网行为管理：360、[深信服](https://bbs.sangfor.com.cn/plugin.php?id=service:download)、蓝盾、华为、莱克斯、网际思安、软云神州、杭州迪普、北信源、网鼎芯睿、陕通、上海新网程、奥联科技、交大捷普、任子行、上海纽盾、东软、Panabit、北京擎企、金山、盛世光明、博智软件、H3C、万网博通、极安、江民科技、迈科网络、六壬网安、弘积科技
 * 网络安全审计：天融信、莱克斯、启明星辰、交大捷普、绿盟科技、蓝盾、广州国迈、软云神州、任子行、雨人、上海观安、上海纽盾、360、恒安嘉新、盛世光明、海峡信息、博智软件、杭州迪普、中科新业、重庆智多
-* 网络流量控制：360、[深信服](https://bbs.sangfor.com.cn/plugin.php?id=service:download)、流控大师、Panabit、蓝盾、软云神州、网鼎芯睿、互普&溢信（IP-Guard）、东华软件、上海纽盾、灵州网络、恒安嘉新、北京擎企、金山、盛世光明、杭州迪普、万网博通、极安、迈科网络
+* 网络流量控制：360、[深信服](https://bbs.sangfor.com.cn/plugin.php?id=sangfor_databases:index&mod=viewdatabase&tid=134409)、流控大师、Panabit、蓝盾、软云神州、网鼎芯睿、互普&溢信（IP-Guard）、东华软件、上海纽盾、灵州网络、恒安嘉新、北京擎企、金山、盛世光明、杭州迪普、万网博通、极安、迈科网络
 * 网络流量分析：科来公司、东华软件、绿盟科技、网鼎芯睿、上海观安、上海纽盾、恒安嘉新、Panabit、亚信安全、安天、江民科技、华青融天、迈科网络
 * 防病毒网关/防毒墙：网御星云、蓝盾、冠群金辰、杭州迪普、瑞星、360、安恒信息、山石网科、亚信安全、安天、金山、天融信、海峡信息、安信华、博智软件、江民科技
 * APT未知威胁发现：安恒信息、科来公司、360、天融信、启明星辰、东巽科技、安天、绿盟科技、华为、神州网云、成都力合智远、经纬信安、兰云科技、中铁信睿安、卫达安全、恒安嘉新、宝利九章、亚信安全、安赛创想、金山、海峡信息、博智软件、[知道创宇](https://www.seebug.org/)、江民科技、六壬网安
