--- a/网络安全.md
+++ b/网络安全.md
@@ -160,3 +160,49 @@
 
 ----
 
+
+## [信息技术保护](https://bbs.sangfor.com.cn/forum.php?mod=viewthread&tid=59811)
+
+#### 物理安全
+
+#### 网络安全
+
+#### 主机系统安全
+
+#### 应用系统安全
+
+* 身份鉴别
+* 访问控制
+* 安全审计
+* 剩余信息保护
+* 通信完整性
+* 抗抵赖
+* 通信保密性
+* 软件容错
+* 资源控制
+* 代码安全
+
+#### 数据安全
+
+* 数据完整性
+* 数据保密性
+* 数据备份和恢复
+
+
+
+## [人员管理安全](https://bbs.sangfor.com.cn/forum.php?mod=viewthread&tid=59811)
+
+#### 安全管理机构
+
+#### 安全管理制度
+
+#### 人员安全管理
+
+#### 系统建设管理
+
+#### 系统运维管理
+
+
+----
+
+
