--- a/网络安全.md
+++ b/网络安全.md
@@ -172,13 +172,14 @@
 #### 应用系统安全
 
 * 身份鉴别
-    * 1） 系统用户的身份标识应具有唯一性；
-    * 2） 应对登录的用户进行身份标识和鉴别；
+    * 1） 系统用户的`身份标识`应具有`唯一性`；
+    * 2） 应对登录的用户进行`身份标识`和`鉴别`；
     * 3） 系统用户的身份鉴别信息应具有不易被冒用的特点，例如口令长度、复杂性和定期的更新等；
     * 4） 应对同一用户采用两种或两种以上组合的鉴别技术实现用户身份鉴别；
     * 5） 应具有登录失败处理功能，如：结束会话、限制非法登录次数，当登录连接超时，自动退出；
-    * 6） 应具有鉴别警示功能；
+    * 6） 应具有鉴别`警示功能`；
     * 7） 应用系统应及时清除存储空间中动态使用的鉴别信息。
+      * 用户会话Session过期、JWT身份认证令牌过期
 * 访问控制
     * 1） 应依据安全策略控制用户对客体的访问；
     * 2） 自主访问控制的覆盖范围应包括与信息安全直接相关的主体、客体及它们之间的操作；
@@ -201,8 +202,8 @@
 * 通信完整性
     * 1） 通信双方应约定密码算法，计算通信数据报文的报文验证码，在进行通信时，双方根据校验码判断对方报文的有效性。
 * 抗抵赖
-    * 1） 应具有在请求的情况下为数据原发者或接收者提供数据原发证据的功能；
-    * 2） 应具有在请求的情况下为数据原发者或接收者提供数据接收证据的功能。
+    * 1） 应具有在请求的情况下为数据原发者或接收者提供数据`原发证据`的功能；
+    * 2） 应具有在请求的情况下为数据原发者或接收者提供数据`接收证据`的功能。
 * 通信保密性
     * 1） 当通信双方中的一方在一段时间内未作任何响应，另一方应能够自动结束会话；
     * 2） 在通信双方建立连接之前，利用密码技术进行会话初始化验证；
@@ -233,13 +234,11 @@
 
 * 数据完整性
     * 1） 应能够检测到系统管理数据、鉴别信息和用户数据在传输过程中完整性受到破坏，并在检测到完整性错误时采取必要的恢复措施；
-    * 2） 应能够检测到系统管理数据、鉴别信息和用户数据在存储过程中完整性受到破坏，并在检测到完整性错误时采取必要的恢复措施；
-    * 3） 应能够检测到重要程序的完整性受到破坏，并在检测到完整性错误时采取必要的恢复措施。
+    * 2） 应能够检测到重要程序的完整性受到破坏，并在检测到完整性错误时采取必要的恢复措施。
 * 数据保密性
     * 1） 网络设备、操作系统、数据库管理系统和应用系统的鉴别信息、敏感的系统管理数据和敏感的用户数据应采用加密或其他有效措施实现传输保密性；
-    * 2） 网络设备、操作系统、数据库管理系统和应用系统的鉴别信息、敏感的系统管理数据和敏感的用户数据应采用加密或其他保护措施实现存储保密性；
-    * 3） 当使用便携式和移动式设备时，应加密或者采用可移动磁盘存储敏感信息；
-    * 4） 用于特定业务通信的通信信道应符合相关的国家规定。
+    * 2） 当使用便携式和移动式设备时，应加密或者采用可移动磁盘存储敏感信息；
+    * 3） 用于特定业务通信的通信信道应符合相关的国家规定。
 * 数据备份和恢复
     * 1） 应提供自动机制对重要信息进行本地和异地备份；
     * 2） 应提供恢复重要信息的功能；
