--- a/网络安全.md
+++ b/网络安全.md
@@ -181,7 +181,7 @@
     * 7） 应用系统应及时清除存储空间中动态使用的鉴别信息。
       * 用户会话Session过期、JWT身份认证令牌过期
 * 访问控制
-    * 1） 应依据安全策略控制用户对客体的访问；
+    * 1） 应依据安全策略控制用户对客体(文件)的访问；
     * 2） 自主访问控制的覆盖范围应包括与信息安全直接相关的主体、客体及它们之间的操作；
     * 3） 自主访问控制的粒度应达到主体为用户级，客体为文件、数据库表级；
     * 4） 应由授权主体设置用户对系统功能操作和对数据访问的权限；
@@ -197,7 +197,7 @@
     * 6） 审计进程应受到保护避免受到未预期的中断；
     * 7） 审计记录应受到保护避免受到未预期的删除、修改或覆盖等。
 * 剩余信息保护
-    * 1） 应保证用户的鉴别信息所在的存储空间，被释放或再分配给其他用户前得到完全清除，无论这些信息是存放在硬盘上还是在内存中；
+    * 1） 应保证用户的鉴别信息所在的存储空间，被释放或再分配给其他用户前得到完全清除，无论是存放在硬盘上还是在内存中；
     * 2） 应确保系统内的文件、目录和数据库记录等资源所在的存储空间，被释放或重新分配给其他用户前得到完全清除。
 * 通信完整性
     * 1） 通信双方应约定密码算法，计算通信数据报文的报文验证码，在进行通信时，双方根据校验码判断对方报文的有效性。
@@ -223,7 +223,7 @@
     * 6） 应对一个访问用户或一个请求进程占用的资源分配最大限额和最小限额；
     * 7） 应根据安全属性（用户身份、访问地址、时间范围等）允许或拒绝用户建立会话连接；
     * 8） 当系统的服务水平降低到预先规定的最小值时，应能检测和报警；
-    * 9） 应根据安全策略设定主体的服务优先级，根据优先级分配系统资源，保证优先级低的主体处理能力不会影响到优先级高的主体的处理能力。
+    * 9） 应根据安全策略设定主体的服务优先级，根据优先级分配系统资源，保证优先级低的主体(账号)处理能力不会影响高的处理能力。
 * 代码安全
     * 1） 应制定应用程序代码编写安全规范，要求开发人员参照规范编写代码；
     * 2） 应对应用程序代码进行代码复审，识别可能存在的恶意代码；
@@ -236,7 +236,7 @@
     * 1） 应能够检测到系统管理数据、鉴别信息和用户数据在传输过程中完整性受到破坏，并在检测到完整性错误时采取必要的恢复措施；
     * 2） 应能够检测到重要程序的完整性受到破坏，并在检测到完整性错误时采取必要的恢复措施。
 * 数据保密性
-    * 1） 网络设备、操作系统、数据库管理系统和应用系统的鉴别信息、敏感的系统管理数据和敏感的用户数据应采用加密或其他有效措施实现传输保密性；
+    * 1） 网络设备、操作系统、数据库管理系统和应用系统的鉴别信息、敏感数据，应采用加密或其他有效措施实现传输保密性；
     * 2） 当使用便携式和移动式设备时，应加密或者采用可移动磁盘存储敏感信息；
     * 3） 用于特定业务通信的通信信道应符合相关的国家规定。
 * 数据备份和恢复
