--- a/网络安全.md
+++ b/网络安全.md
@@ -173,13 +173,15 @@
 
 * 身份鉴别
     * 1） 系统用户的`身份标识`应具有`唯一性`；
+      * 用户的手机号为唯一标识；系统随机生成唯一账号名称；
     * 2） 应对登录的用户进行`身份标识`和`鉴别`；
+      * 手机号+短信验证进行登录；账号名称+密码验证进行登录；
     * 3） 系统用户的身份鉴别信息应具有不易被冒用的特点，例如口令长度、复杂性和定期的更新等；
     * 4） 应对同一用户采用两种或两种以上组合的鉴别技术实现用户身份鉴别；
     * 5） 应具有登录失败处理功能，如：结束会话、限制非法登录次数，当登录连接超时，自动退出；
     * 6） 应具有鉴别`警示功能`；
     * 7） 应用系统应及时清除存储空间中动态使用的鉴别信息。
-      * 用户会话Session过期、JWT身份认证令牌过期
+      * 用户会话Session过期、JWT身份认证令牌过期；
 * 访问控制
     * 1） 应依据安全策略控制用户对客体(文件)的访问；
     * 2） 自主访问控制的覆盖范围应包括与信息安全直接相关的主体、客体及它们之间的操作；
