--- a/网络安全.md
+++ b/网络安全.md
@@ -173,13 +173,24 @@
 
 * 身份鉴别
     * 1） 系统用户的`身份标识`应具有`唯一性`；
-      * 用户的手机号为唯一标识；系统随机生成唯一账号名称；
+      * 用户的手机号为唯一标识；系统随机生成唯一账号名称；DB字段添加唯一性约束。
     * 2） 应对登录的用户进行`身份标识`和`鉴别`；
-      * 手机号+短信验证进行登录；账号名称+密码验证进行登录；
+      * 提供给用户通过手机号注册账号的功能，管理员后台添加用户账号的功能；
+      * 手机号+短信验证进行登录；账号名称+密码验证进行登录；可接入开放平台的授权登录+系统账号绑定功能。
     * 3） 系统用户的身份鉴别信息应具有不易被冒用的特点，例如口令长度、复杂性和定期的更新等；
+      * 账号口令长度至少6位、字母+数字+特殊字符至少包含两种；
+      * 禁止跨域请求或限制请求来源 Access-Control-Allow-*
+      * 开启内容保护 X-Content-Type-Options: nosniff 
+      * 开启XSS保护 X-XSS-Protection: 1; mode=block 
+      * 防止iframe加载网页 X-Frame-Options: SAMEORIGIN 
+      * 防止重放攻击 X-Request-Id : GUID 
     * 4） 应对同一用户采用两种或两种以上组合的鉴别技术实现用户身份鉴别；
+      * 手机号+短信验证进行登录；账号名称+密码验证进行登录；
     * 5） 应具有登录失败处理功能，如：结束会话、限制非法登录次数，当登录连接超时，自动退出；
+      * 配置登录Session过期时间、JWT身份令牌过期时间；
+      * 可限制一个账号一小时内登录失败的次数；
     * 6） 应具有鉴别`警示功能`；
+      * 记录用户登录IP或设备，当异地登录时可发送短信提醒；
     * 7） 应用系统应及时清除存储空间中动态使用的鉴别信息。
       * 用户会话Session过期、JWT身份认证令牌过期；
 * 访问控制
