--- a/网络安全.md
+++ b/网络安全.md
@@ -170,6 +170,7 @@
 #### 主机系统安全
 
 #### 应用系统安全
+    统一安全管理平台 4A(Authentication,Authorization,Account,Audit)
 
 * 身份鉴别
     * 1） 系统用户的`身份标识`应具有`唯一性`；
@@ -183,7 +184,7 @@
       * 开启内容保护 X-Content-Type-Options: nosniff 
       * 开启XSS保护 X-XSS-Protection: 1; mode=block 
       * 防止iframe加载网页 X-Frame-Options: SAMEORIGIN 
-      * 防止重放攻击 X-Request-Id : GUID 
+      * 防止重放攻击 X-Request-Id: GUID 
     * 4） 应对同一用户采用两种或两种以上组合的鉴别技术实现用户身份鉴别；
       * 手机号+短信验证进行登录；账号名称+密码验证进行登录；
     * 5） 应具有登录失败处理功能，如：结束会话、限制非法登录次数，当登录连接超时，自动退出；
@@ -192,9 +193,15 @@
     * 6） 应具有鉴别`警示功能`；
       * 记录用户登录IP或设备，当异地登录时可发送短信提醒；
     * 7） 应用系统应及时清除存储空间中动态使用的鉴别信息。
-      * 用户会话Session过期、JWT身份认证令牌过期；
+      * 用户会话Session过期、JWT身份认证令牌过期，过期后自动清除缓存。
 * 访问控制
-    * 1） 应依据安全策略控制用户对客体(文件)的访问；
+    * 1） 应依据安全策略控制用户对客体(资源文件&接口数据)的访问；
+       - [`ABAC`基于属性的访问控制(Attribute-Based Access Control)](https://casbin.org/) → [策略引擎`OPA`](https://www.openpolicyagent.org/docs/)
+       - [`RBAC`基于角色的访问控制(Role-Based Access Control)](https://casbin.org/)→[`MongoDB`](https://www.mongodb.org.cn/)→[`goRBAC`](https://github.com/mikespook/gorbac)
+       - [`CBAC`基于声明的访问控制(Claim-Based Access Control)](https://docs.microsoft.com/zh-cn/openspecs/windows_protocols/ms-azod/e600249e-247b-469c-8979-e0c578adfbe6)→[`ASP.NET`](https://docs.microsoft.com/zh-cn/openspecs/windows_protocols/ms-azod/e600249e-247b-469c-8979-e0c578adfbe6)
+         - [`身份认证`](https://www.cnblogs.com/JulianHuang/p/13725873.html)
+            - `Claim`*申明*身份的片段数据→`ClaimsIdentity`*单个身份*信息→`ClaimsPrincipal`*主体*身份的集合
+         - [`访问控制(casbin)`](https://casbin.org/)→[`资源命名(upspin)`](https://github.com/upspin/upspin)→[`准入控制(AdmissionControl)`](https://juejin.cn/book/6844733753063915533/section/6844733753131008007)
     * 2） 自主访问控制的覆盖范围应包括与信息安全直接相关的主体、客体及它们之间的操作；
     * 3） 自主访问控制的粒度应达到主体为用户级，客体为文件、数据库表级；
     * 4） 应由授权主体设置用户对系统功能操作和对数据访问的权限；
