--- a/网络安全.md
+++ b/网络安全.md
@@ -4,7 +4,7 @@
 * [安全思维导图集合](https://github.com/angenalZZZ/sec-chart)、[`书籍`](https://www.sec-wiki.com/book/index/type/websec)
 * [`网络安全产品`百科](https://baike.baidu.com/item/%E7%BD%91%E7%BB%9C%E5%AE%89%E5%85%A8%E4%BA%A7%E5%93%81/4181001)
 * [`等保`二级、三级要求比较](https://bbs.sangfor.com.cn/forum.php?mod=viewthread&tid=59811)
-* [`等保`信息技术保护](#信息技术保护)、[`等保`人员管理安全](#人员管理安全)
+* [`等保`**信息技术保护**](#信息技术保护)、[`等保`**人员管理安全**](#人员管理安全)
 
 > 工具
 * [`测速网`检测工具](https://www.speedtest.cn/tools)、[`脚本之家`在线工具](http://tools.jb51.net/)、[`BeJSON`开发工具](http://www.bejson.com/)
@@ -170,7 +170,8 @@
 #### 主机系统安全
 
 #### 应用系统安全
-    统一安全管理平台 4A(Authentication,Authorization,Account,Audit)
+
+    统一安全管理平台 4A(Authentication身份鉴别,Authorization访问授权,Account账号信息,Audit安全审计)
 
 * 身份鉴别
     * 1） 系统用户的`身份标识`应具有`唯一性`；
@@ -191,9 +192,9 @@
       * 配置登录Session过期时间、JWT身份令牌过期时间；
       * 可限制一个账号一小时内登录失败的次数；
     * 6） 应具有鉴别`警示功能`；
-      * 记录用户登录IP或设备，当异地登录时可发送短信提醒；
+      * 记录用户登录IP与设备，出现异地登录时可发送短信提醒用户；
     * 7） 应用系统应及时清除存储空间中动态使用的鉴别信息。
-      * 用户会话Session过期、JWT身份认证令牌过期，过期后自动清除缓存。
+      * 用户会话Session过期、JWT身份认证令牌过期，过期后自动清除系统缓存和Redis缓存。
 * 访问控制
     * 1） 应依据安全策略控制用户对客体(资源文件&接口数据)的访问；
        - [`ABAC`基于属性的访问控制(Attribute-Based Access Control)](https://casbin.org/) → [策略引擎`OPA`](https://www.openpolicyagent.org/docs/)
@@ -203,6 +204,9 @@
             - `Claim`*申明*身份的片段数据→`ClaimsIdentity`*单个身份*信息→`ClaimsPrincipal`*主体*身份的集合
          - [`访问控制(casbin)`](https://casbin.org/)→[`资源命名(upspin)`](https://github.com/upspin/upspin)→[`准入控制(AdmissionControl)`](https://juejin.cn/book/6844733753063915533/section/6844733753131008007)
     * 2） 自主访问控制的覆盖范围应包括与信息安全直接相关的主体、客体及它们之间的操作；
+      * 用户权限划分为管理、添加、删除、修改和查询五个级别；
+      * 管理员具有灵活定义用户的访问内容和访问级别的权限；
+      * 所有信息分级存储，不同权限的用户浏览不同模块的信息；
     * 3） 自主访问控制的粒度应达到主体为用户级，客体为文件、数据库表级；
     * 4） 应由授权主体设置用户对系统功能操作和对数据访问的权限；
     * 5） 应实现应用系统特权用户的权限分离，例如将管理与审计的权限分配给不同的应用系统用户；
