--- a/网络安全.md
+++ b/网络安全.md
@@ -197,19 +197,21 @@
       * 用户会话Session过期、JWT身份认证令牌过期，过期后自动清除系统缓存和Redis缓存。
 * 访问控制
     * 1） 应依据安全策略控制用户对客体(资源文件&接口数据)的访问；
-       - [`ABAC`基于属性的访问控制(Attribute-Based Access Control)](https://casbin.org/) → [策略引擎`OPA`](https://www.openpolicyagent.org/docs/)
+       - [`OPA`策略引擎](https://www.openpolicyagent.org/docs/)
+         - [`访问控制(casbin)`](https://casbin.org/)→[`资源命名(upspin)`](https://github.com/upspin/upspin)→[`准入控制(AdmissionControl)`](https://juejin.cn/book/6844733753063915533/section/6844733753131008007)
+       - [`ABAC`基于属性的访问控制(Attribute-Based Access Control)](https://casbin.org/)
        - [`RBAC`基于角色的访问控制(Role-Based Access Control)](https://casbin.org/)→[`MongoDB`](https://www.mongodb.org.cn/)→[`goRBAC`](https://github.com/mikespook/gorbac)
        - [`CBAC`基于声明的访问控制(Claim-Based Access Control)](https://docs.microsoft.com/zh-cn/openspecs/windows_protocols/ms-azod/e600249e-247b-469c-8979-e0c578adfbe6)→[`ASP.NET`](https://docs.microsoft.com/zh-cn/openspecs/windows_protocols/ms-azod/e600249e-247b-469c-8979-e0c578adfbe6)
-         - [`身份认证`](https://www.cnblogs.com/JulianHuang/p/13725873.html)
+         - [`身份认证`](https://www.cnblogs.com/JulianHuang/p/13725873.html)、`身份标识`和`鉴别`
             - `Claim`*申明*身份的片段数据→`ClaimsIdentity`*单个身份*信息→`ClaimsPrincipal`*主体*身份的集合
-         - [`访问控制(casbin)`](https://casbin.org/)→[`资源命名(upspin)`](https://github.com/upspin/upspin)→[`准入控制(AdmissionControl)`](https://juejin.cn/book/6844733753063915533/section/6844733753131008007)
     * 2） 自主访问控制的覆盖范围应包括与信息安全直接相关的主体、客体及它们之间的操作；
-      * 用户权限划分为管理、添加、删除、修改和查询五个级别；
-      * 管理员具有灵活定义用户的访问内容和访问级别的权限；
       * 所有信息分级存储，不同权限的用户浏览不同模块的信息；
     * 3） 自主访问控制的粒度应达到主体为用户级，客体为文件、数据库表级；
+      * 用户权限划分为管理、添加、删除、修改和查询五个级别；
     * 4） 应由授权主体设置用户对系统功能操作和对数据访问的权限；
+      * 管理员具有灵活定义用户的访问内容和访问级别的权限；
     * 5） 应实现应用系统特权用户的权限分离，例如将管理与审计的权限分配给不同的应用系统用户；
+      * 建立用户分组、权限分组、功能分组；
     * 6） 权限分离应采用最小授权原则，分别授予不同用户各自为完成自己承担任务所需的最小权限，并在它们之间形成相互制约的关系；
     * 7） 应严格限制默认用户的访问权限。
 * 安全审计
