--- a/网络安全.md
+++ b/网络安全.md
@@ -211,9 +211,11 @@
     * 4） 应由授权主体设置用户对系统功能操作和对数据访问的权限；
       * 管理员具有灵活定义用户的访问内容和访问级别的权限；
     * 5） 应实现应用系统特权用户的权限分离，例如将管理与审计的权限分配给不同的应用系统用户；
-      * 建立用户分组、权限分组、功能分组；
     * 6） 权限分离应采用最小授权原则，分别授予不同用户各自为完成自己承担任务所需的最小权限，并在它们之间形成相互制约的关系；
+      * 建立用户角色分组、权限分组、功能分组；
     * 7） 应严格限制默认用户的访问权限。
+      * 系统功能菜单按角色进行划分及控制；
+      * 数据接口具有最小粒度的访问权限验证；
 * 安全审计
     * 1） 安全审计应覆盖到应用系统的每个用户；
     * 2） 安全审计应记录应用系统重要的安全相关事件，包括重要用户行为、系统资源的异常使用和重要系统功能的执行等；
