--- a/网络安全.md
+++ b/网络安全.md
@@ -202,7 +202,7 @@
        - [`ABAC`基于属性的访问控制(Attribute-Based Access Control)](https://casbin.org/)
        - [`RBAC`基于角色的访问控制(Role-Based Access Control)](https://casbin.org/)→[`MongoDB`](https://www.mongodb.org.cn/)→[`goRBAC`](https://github.com/mikespook/gorbac)
        - [`CBAC`基于声明的访问控制(Claim-Based Access Control)](https://docs.microsoft.com/zh-cn/openspecs/windows_protocols/ms-azod/e600249e-247b-469c-8979-e0c578adfbe6)→[`ASP.NET`](https://docs.microsoft.com/zh-cn/openspecs/windows_protocols/ms-azod/e600249e-247b-469c-8979-e0c578adfbe6)
-         - [`身份认证`](https://www.cnblogs.com/JulianHuang/p/13725873.html)、`身份标识`和`鉴别`
+         - [`身份认证`](https://www.cnblogs.com/JulianHuang/p/13725873.html)`身份标识`和`鉴别`
             - `Claim`*申明*身份的片段数据→`ClaimsIdentity`*单个身份*信息→`ClaimsPrincipal`*主体*身份的集合
     * 2） 自主访问控制的覆盖范围应包括与信息安全直接相关的主体、客体及它们之间的操作；
       * 所有信息分级存储，不同权限的用户浏览不同模块的信息；
@@ -211,11 +211,13 @@
     * 4） 应由授权主体设置用户对系统功能操作和对数据访问的权限；
       * 管理员具有灵活定义用户的访问内容和访问级别的权限；
     * 5） 应实现应用系统特权用户的权限分离，例如将管理与审计的权限分配给不同的应用系统用户；
+      * 建立用户角色分组、权限分组(角色功能分组)；
     * 6） 权限分离应采用最小授权原则，分别授予不同用户各自为完成自己承担任务所需的最小权限，并在它们之间形成相互制约的关系；
-      * 建立用户角色分组、权限分组、功能分组；
+      * 管理员具有分配用户角色、配置角色权限的能力；
+      * 普通管理员或普通用户提交的信息，需等待具有审核权限的管理员进行审批；
     * 7） 应严格限制默认用户的访问权限。
-      * 系统功能菜单按角色进行划分及控制；
-      * 数据接口具有最小粒度的访问权限验证；
+      * 系统功能菜单按角色进行划分；
+      * 数据接口提供最小粒度的访问权限验证；
 * 安全审计
     * 1） 安全审计应覆盖到应用系统的每个用户；
     * 2） 安全审计应记录应用系统重要的安全相关事件，包括重要用户行为、系统资源的异常使用和重要系统功能的执行等；
