--- a/网络安全.md
+++ b/网络安全.md
@@ -171,7 +171,7 @@
 
 #### 应用系统安全
 
-    统一安全管理平台 4A(Authentication身份鉴别,Authorization访问授权,Account账号信息,Audit安全审计)
+    统一安全管理平台 4A(Authentication身份鉴别,Authorization访问授权,Account会话账号,Audit安全审计)
 
 * 身份鉴别
     * 1） 系统用户的`身份标识`应具有`唯一性`；
@@ -197,7 +197,7 @@
       * 用户会话Session过期、JWT身份认证令牌过期，过期后自动清除系统缓存和Redis缓存。
 * 访问控制
     * 1） 应依据安全策略控制用户对客体(资源文件&接口数据)的访问；
-       - [`OPA`策略引擎](https://www.openpolicyagent.org/docs/)
+       - [`OPA`策略引擎](https://www.openpolicyagent.org/docs/)`推荐`该`CNCF`项目,由`Google`,`微软`,`Styra`等共同搭建。
          - [`访问控制(casbin)`](https://casbin.org/)→[`资源命名(upspin)`](https://github.com/upspin/upspin)→[`准入控制(AdmissionControl)`](https://juejin.cn/book/6844733753063915533/section/6844733753131008007)
        - [`ABAC`基于属性的访问控制(Attribute-Based Access Control)](https://casbin.org/)
        - [`RBAC`基于角色的访问控制(Role-Based Access Control)](https://casbin.org/)→[`MongoDB`](https://www.mongodb.org.cn/)→[`goRBAC`](https://github.com/mikespook/gorbac)
@@ -213,16 +213,24 @@
     * 5） 应实现应用系统特权用户的权限分离，例如将管理与审计的权限分配给不同的应用系统用户；
       * 建立用户角色分组、权限分组(角色功能分组)；
     * 6） 权限分离应采用最小授权原则，分别授予不同用户各自为完成自己承担任务所需的最小权限，并在它们之间形成相互制约的关系；
+      * 超级管理员具有分配管理员账号及权限的能力；
       * 管理员具有分配用户角色、配置角色权限的能力；
       * 普通管理员或普通用户提交的信息，需等待具有审核权限的管理员进行审批；
+      * 用户只能访问自己被授权的资源；
     * 7） 应严格限制默认用户的访问权限。
       * 系统功能菜单按角色进行划分；
       * 数据接口提供最小粒度的访问权限验证；
 * 安全审计
     * 1） 安全审计应覆盖到应用系统的每个用户；
+      * 普通用户登录退出、提交表单等操作记录；
+      * 管理员登录退出及后台管理功能的所有操作记录；
     * 2） 安全审计应记录应用系统重要的安全相关事件，包括重要用户行为、系统资源的异常使用和重要系统功能的执行等；
+      * 数据接口提供需要指定权限才能访问的操作事件日志；
+      * 接口异常时会记录系统失败原因、堆栈跟踪日志记录；
     * 3） 安全相关事件的记录应包括日期和时间、类型、主体标识、客体标识、事件的结果等；
+      * 操作事件日志记录了完整的跟踪信息(除了上传异常的文件内容等)；
     * 4） 安全审计应可以根据记录数据进行分析，并生成审计报表；
+      * WEB服务器Apache、IIS、Nginx等，均可记录所有HTTP请求日志；
     * 5） 安全审计应可以对特定事件，提供指定方式的实时报警；
     * 6） 审计进程应受到保护避免受到未预期的中断；
     * 7） 审计记录应受到保护避免受到未预期的删除、修改或覆盖等。
