--- a/网络安全.md
+++ b/网络安全.md
@@ -169,9 +169,12 @@
 
 #### 主机系统安全
 
-#### 应用系统安全
+    统一安全管理平台（堡垒机）4A(Authentication,Authorization,Account,Audit)<br>
+    > 对服务器进行安全管理及系统升级；<br>
+    > 用户统一从4A门户登录，然后访问资源；<br>
+    > 提供系统运维管控、应用接入管控和文档数据管控。
 
-    统一安全管理平台 4A(Authentication身份鉴别,Authorization访问授权,Account会话账号,Audit安全审计)
+#### 应用系统安全
 
 * 身份鉴别
     * 1） 系统用户的`身份标识`应具有`唯一性`；
@@ -229,6 +232,7 @@
       * 接口异常时会记录系统失败原因、堆栈跟踪日志记录；
     * 3） 安全相关事件的记录应包括日期和时间、类型、主体标识、客体标识、事件的结果等；
       * 操作事件日志记录了完整的跟踪信息(除了上传异常的文件内容等)；
+      * 提供IPS入侵防御系统；
     * 4） 安全审计应可以根据记录数据进行分析，并生成审计报表；
       * WEB服务器Apache、IIS、Nginx等，均可记录所有HTTP请求日志；
     * 5） 安全审计应可以对特定事件，提供指定方式的实时报警；
