--- a/网络安全.md
+++ b/网络安全.md
@@ -170,8 +170,8 @@
 #### 主机系统安全
 
     统一安全管理平台（堡垒机）4A(Authentication,Authorization,Account,Audit)<br>
-    > 对服务器进行安全管理及系统升级；<br>
-    > 用户统一从4A门户登录，然后访问资源；<br>
+    > 对服务器进行安全管理及系统升级；
+    > 用户统一从4A门户登录，然后访问资源；
     > 提供系统运维管控、应用接入管控和文档数据管控。
 
 #### 应用系统安全
