--- a/网络安全.md
+++ b/网络安全.md
@@ -169,9 +169,9 @@
 
 #### 主机系统安全
 
-    统一安全管理平台（堡垒机）4A(Authentication,Authorization,Account,Audit)<br>
-    > 对服务器进行安全管理及系统升级；
-    > 用户统一从4A门户登录，然后访问资源；
+    统一安全管理平台 `堡垒机` 4A(Authentication,Authorization,Account,Audit)
+    > 用户统一从4A门户登录后访问资源；
+    > 对服务器进行统一的安全管理与系统升级；
     > 提供系统运维管控、应用接入管控和文档数据管控。
 
 #### 应用系统安全
@@ -232,9 +232,10 @@
       * 接口异常时会记录系统失败原因、堆栈跟踪日志记录；
     * 3） 安全相关事件的记录应包括日期和时间、类型、主体标识、客体标识、事件的结果等；
       * 操作事件日志记录了完整的跟踪信息(除了上传异常的文件内容等)；
-      * 提供IPS入侵防御系统；
+      * WEB应用服务器网络入口，可安装IDS入侵检测系统、IPS入侵防御系统；
     * 4） 安全审计应可以根据记录数据进行分析，并生成审计报表；
-      * WEB服务器Apache、IIS、Nginx等，均可记录所有HTTP请求日志；
+      * WEB应用服务器Apache、IIS、Nginx等，均可记录所有HTTP请求日志；
+      * IDS和IPS提供系统检测、跟踪、防御、分析、报表等，保证WEB应用服务器的安全；
     * 5） 安全审计应可以对特定事件，提供指定方式的实时报警；
     * 6） 审计进程应受到保护避免受到未预期的中断；
     * 7） 审计记录应受到保护避免受到未预期的删除、修改或覆盖等。
