--- a/网络安全.md
+++ b/网络安全.md
@@ -167,6 +167,8 @@
 
 #### 网络安全
 
+    IDS入侵检测系统、IPS入侵防御系统；
+
 #### 主机系统安全
 
     统一安全管理平台 `堡垒机` 4A(Authentication,Authorization,Account,Audit)
@@ -237,8 +239,11 @@
       * WEB应用服务器Apache、IIS、Nginx等，均可记录所有HTTP请求日志；
       * IDS和IPS提供系统检测、跟踪、防御、分析、报表等，保证WEB应用服务器的安全；
     * 5） 安全审计应可以对特定事件，提供指定方式的实时报警；
+      * WEB应用系统的异常可通过手机短信或邮件的方式通知到运维人员和系统管理员；
     * 6） 审计进程应受到保护避免受到未预期的中断；
+      * WEB应用的跟踪日志可通过RPC跨进程跨服务器调用实现；
     * 7） 审计记录应受到保护避免受到未预期的删除、修改或覆盖等。
+      * 审计日志只能由特定的用户进行管理和查看；
 * 剩余信息保护
     * 1） 应保证用户的鉴别信息所在的存储空间，被释放或再分配给其他用户前得到完全清除，无论是存放在硬盘上还是在内存中；
     * 2） 应确保系统内的文件、目录和数据库记录等资源所在的存储空间，被释放或重新分配给其他用户前得到完全清除。
