--- a/网络安全.md
+++ b/网络安全.md
@@ -167,6 +167,7 @@
 
 #### 网络安全
 
+    等保一体机，或：
     系统安全防火墙；
     IDS入侵检测系统；
     IPS入侵防御系统；
@@ -176,8 +177,9 @@
     统一安全管理平台 `堡垒机` 4A(Authentication,Authorization,Account,Audit)；
     > 用户统一从4A门户登录后访问资源；
     > 对服务器进行统一的安全管理与系统升级；
-    > 提供系统运维管控、应用接入管控和文档数据管控。
-    Web应用防火墙`WAF`；
+    > 提供系统运维管控、应用接入管控和文档数据管控
+    
+    Web应用防火墙`WAF`。
 
 #### 应用系统安全
 
