--- a/网络安全.md
+++ b/网络安全.md
@@ -8,6 +8,13 @@
 
 > 工具
 * [`测速网`检测工具](https://www.speedtest.cn/tools)、[`脚本之家`在线工具](http://tools.jb51.net/)、[`BeJSON`开发工具](http://www.bejson.com/)
+* [`MD5解密`](https://www.scmd5.com/) *1-6位所有可能 共计5374亿条记录，如果[`MD5解密`](https://www.scmd5.com/)查不到，则可以肯定是大于6位！*
+~~~bash
+> chcp 65001 # 编码切换: UTF-8
+> chcp 936   # 编码切换: GBK (ANSI/OEM - 简体中文GBK)
+> md5 -u     # 查看MD5命令行文档 - www.fourmilab.ch
+> curl https://www.scmd5.com/get_api.php?hash=E10ADC3949BA59ABBE56E057F20F883E # MD5解密
+~~~
 
 
 ## 产品厂商分类
