--- a/网络安全.md
+++ b/网络安全.md
@@ -8,12 +8,15 @@
 
 > 工具
 * [`测速网`检测工具](https://www.speedtest.cn/tools)、[`脚本之家`在线工具](http://tools.jb51.net/)、[`BeJSON`开发工具](http://www.bejson.com/)
-* [`MD5解密`](https://www.scmd5.com/) *1-6位所有可能 共计5374亿条记录，如果[`MD5解密`](https://www.scmd5.com/)查不到，则可以肯定是大于6位！*
+* [`MD5解密`](https://www.scmd5.com/) *1-6位所有可能 共计5374亿条记录，如果[MD5解密](https://www.scmd5.com/)查不到，则可以肯定是大于6位！*
 ~~~bash
 > chcp 65001 # 编码切换: UTF-8
 > chcp 936   # 编码切换: GBK (ANSI/OEM - 简体中文GBK)
-> md5 -u     # 查看MD5命令行文档 - www.fourmilab.ch
-> curl https://www.scmd5.com/get_api.php?hash=E10ADC3949BA59ABBE56E057F20F883E # MD5解密
+# 命令行: md5 -> www.fourmilab.ch  hasher -> github.com/martinlindhe/gohash
+> md5 123456.txt # 加密文本"123456" >> E10ADC3949BA59ABBE56E057F20F883E
+> hasher md5 -i 123456.txt #加密文本>> e10adc3949ba59abbe56e057f20f883e
+# MD5解密:接口
+> curl https://www.scmd5.com/get_api.php?hash=e10adc3949ba59abbe56e057f20f883e
 ~~~
 
 
