--- a/网络安全.md
+++ b/网络安全.md
@@ -7,7 +7,7 @@
 * [`等保`**信息技术保护**](#信息技术保护)、[`等保`**人员管理安全**](#人员管理安全)
 
 > 工具
-* [`IDS`Intrusion detection systems 入侵监测](https://cn.bing.com/search?q=Intrusion+Detection+Scan&qs=n&form=QBLH&sp=-1&pq=intrusion+detection+scan&sc=0-24&sk=&cvid=351462D76D64451FB9044527F99A3A24)
+* [`AVS`Anti-Virus systems 杀毒系统]、[`BAD`Botnet Activity Detection 僵尸网络识别](https://cn.bing.com/search?q=Botnet+Activity+Detection&qs=n&form=QBRE&sp=-1&pq=botnet+activity+detection&sc=0-25&sk=&cvid=CF04DC7EA75140A0A0C362163B4E942B)、[`IDS`Intrusion detection systems 入侵监测](https://cn.bing.com/search?q=Intrusion+Detection+Scan&qs=n&form=QBLH&sp=-1&pq=intrusion+detection+scan&sc=0-24&sk=&cvid=351462D76D64451FB9044527F99A3A24)...
 * [`测速网`检测工具](https://www.speedtest.cn/tools)、[`脚本之家`在线工具](http://tools.jb51.net/)、[`BeJSON`开发工具](http://www.bejson.com/)
 * [`MD5解密`](https://www.scmd5.com/) *1-6位所有可能 共计5374亿条记录，如果[MD5解密](https://www.scmd5.com/)查不到，则可以肯定是大于6位！*
 ~~~bash
