--- a/网络代理.md
+++ b/网络代理.md
@@ -2,9 +2,11 @@
 
 #### 工具 `推荐`
 
-> [`winXray`](https://github.com/TheMRLL/winxray)（[Base on`aardio 🔊 专注于桌面软件开发`](http://www.aardio.com/)）
+> [`winXray`](https://github.com/TheMRLL/winxray)（[Copy`订阅url`](https://github.com/freefq/free) [Base on`aardio 🔊 专注于桌面软件开发`](http://www.aardio.com/)）
 
 > [`v2ray`](https://github.com/v2ray/v2ray-core)（[Copy`订阅url`](http://120.92.132.166:8888/down/MshRNLEFCNSe)）
 
 > [`clash`](https://github.com/Dreamacro/clash)（[Copy`订阅url`](https://suo.yt/YestHxZ)）
+
+> [`dsvpn`](https://github.com/jedisct1/dsvpn)、[`dnscrypt-proxy`](https://github.com/DNSCrypt/dnscrypt-proxy)
 
