--- a/视频会议.md
+++ b/视频会议.md
@@ -1,8 +1,7 @@
-
 # 开源视频会议
 
-#### 1.[Jitsi Meet](https://jitsi.org/jitsi-meet/)
-  免费的、基于 Web 的视频会议服务。[安装](https://jitsi.github.io/handbook/docs/devops-guide/devops-guide-quickstart)、[官方公共实例](https://meet.jit.si/)免费测试。在移动端，安卓和iOS都有应用。
+#### [`Jitsi Meet`](https://jitsi.org/jitsi-meet/)
+> 免费的基于Web的视频会议服务。[`安装`](https://jitsi.github.io/handbook/docs/devops-guide/devops-guide-quickstart)、[`官方公共实例`](https://meet.jit.si/)免费测试。在移动端，安卓和iOS都有应用。
 ~~~bash
 # 系统环境准备
 sudo apt update
