--- a/网络安全.md
+++ b/网络安全.md
@@ -3,7 +3,7 @@
 > 资料
 * [安全思维导图集合](https://github.com/angenalZZZ/sec-chart)、[`书籍`](https://www.sec-wiki.com/book/index/type/websec)
 * [`网络安全产品`百科](https://baike.baidu.com/item/%E7%BD%91%E7%BB%9C%E5%AE%89%E5%85%A8%E4%BA%A7%E5%93%81/4181001)
-* [`等保`二级、三级要求比较](https://bbs.sangfor.com.cn/forum.php?mod=viewthread&tid=59811)
+* [`等保`二级、三级要求比较](https://bbs.sangfor.com.cn/forum.php?mod=viewthread&tid=59811)、[`等保2.0`通用解决方案工具包.zip](https://bbs.sangfor.com.cn/plugin.php?id=sangfor_databases:index&mod=viewdatabase&tid=158559)
 * [`等保`**信息技术保护**](#信息技术保护)、[`等保`**人员管理安全**](#人员管理安全)
 
 > 工具
