--- a/网络代理.md
+++ b/网络代理.md
@@ -6,6 +6,8 @@
 
 > [`v2ray`](https://github.com/v2ray/v2ray-core)（[Copy`订阅url`](http://120.92.132.166:8888/down/MshRNLEFCNSe)）
 
+> [`OpenVPN`](https://openvpn.net/client-connect-vpn-for-windows/)、[`免费`VPN节点](https://www.vpnbook.com/freevpn)
+
 > [`clash`](https://github.com/Dreamacro/clash)（[Copy`订阅url`](https://suo.yt/YestHxZ)）
 
 > [`dsvpn`](https://github.com/jedisct1/dsvpn)、[`dnscrypt-proxy`](https://github.com/DNSCrypt/dnscrypt-proxy)
